--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -14,7 +14,8 @@
     "lightweight-charts": "^4.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
